--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/enhanced-img": "^0.1.9",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@types/lodash": "^4.17.0",
@@ -19,6 +20,7 @@
     "postcss": "^8.4.35",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "svelte-hamburgers": "^4.2.0",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
@@ -27,8 +29,12 @@
   "type": "module",
   "dependencies": {
     "@sveltejs/adapter-vercel": "^5.2.0",
+    "@unpic/svelte": "^0.0.51",
+    "gsap": "^3.12.5",
     "lodash": "^4.17.21",
     "prettier": "^3.2.5",
-    "prettier-plugin-svelte": "^3.2.2"
+    "prettier-plugin-svelte": "^3.2.2",
+    "sharp": "^0.33.3",
+    "svelte-markdown": "^0.4.1"
   }
 }
